--- a/app/src/main/res/layout/activity_browse_events.xml
+++ b/app/src/main/res/layout/activity_browse_events.xml
@@ -11,26 +11,14 @@
         android:orientation="vertical">
         <LinearLayout android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp">
+            android:orientation="horizontal">
             <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="10dp"
-                android:autoSizeTextType="uniform"
-                android:text="@string/events" />
-            <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dip"
+                android:layout_weight="3"
                 android:layout_height="50dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="20dp"
-                android:gravity="center"
-                android:id="@+id/shrani"
-                android:textColor="@color/design_default_color_primary"
-                android:text="@string/shrani"/>
+                android:autoSizeTextType="uniform"
+                android:layout_margin="20dp"
+                android:text="@string/events" />
         </LinearLayout>
     </LinearLayout>
     <com.google.android.material.bottomnavigation.BottomNavigationView
