--- a/app/src/main/res/layout/edit_profile.xml
+++ b/app/src/main/res/layout/edit_profile.xml
@@ -42,7 +42,10 @@
             android:layout_marginRight="20dp"
             android:layout_height="wrap_content"
             android:id="@+id/ime"
-            android:hint="@string/ime"/>
+            android:hint="@string/ime"
+            android:background="?attr/colorSecondary"
+            android:padding="5dp"
+            android:layout_marginVertical="5dp"/>
         <LinearLayout android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -53,7 +56,10 @@
                 android:layout_marginRight="10dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/ulica"
-                android:hint="@string/ulica"/>
+                android:hint="@string/ulica"
+                android:background="?attr/colorSecondary"
+                android:padding="5dp"
+                android:layout_marginVertical="5dp"/>
             <EditText
                 android:layout_width="0dip"
                 android:layout_weight="1"
@@ -62,7 +68,10 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/hisnaSt"
                 android:inputType="number"
-                android:hint="@string/hisnaSt"/>
+                android:hint="@string/hisnaSt"
+                android:background="?attr/colorSecondary"
+                android:padding="5dp"
+                android:layout_marginVertical="5dp"/>
         </LinearLayout>
 
         <LinearLayout android:layout_width="match_parent"
@@ -76,7 +85,10 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/postnaSt"
                 android:inputType="number"
-                android:hint="@string/postnaSt"/>
+                android:hint="@string/postnaSt"
+                android:background="?attr/colorSecondary"
+                android:padding="5dp"
+                android:layout_marginVertical="5dp"/>
             <EditText
                 android:layout_width="0dip"
                 android:layout_weight="5"
@@ -84,7 +96,10 @@
                 android:layout_marginRight="20dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/kraj"
-                android:hint="@string/kraj"/>
+                android:hint="@string/kraj"
+                android:background="?attr/colorSecondary"
+                android:padding="5dp"
+                android:layout_marginVertical="5dp"/>
         </LinearLayout>
 
         <TextView
@@ -105,7 +120,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="10dp"
                 android:src="@drawable/baseline_mail_outline_24"
-                app:tint="@color/design_default_color_primary" />
+                app:tint="?attr/colorOnSecondary" />
             <EditText
                 android:layout_width="0dip"
                 android:layout_weight="1"
@@ -113,7 +128,10 @@
                 android:layout_marginRight="20dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/email"
-                android:hint="@string/email"/>
+                android:hint="@string/email"
+                android:background="?attr/colorSecondary"
+                android:padding="5dp"
+                android:layout_marginVertical="5dp"/>
         </LinearLayout>
         <LinearLayout android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -124,7 +142,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="10dp"
                 android:src="@drawable/baseline_phone_24"
-                app:tint="@color/design_default_color_primary" />
+                app:tint="?attr/colorOnSecondary" />
             <EditText
                 android:layout_width="0dip"
                 android:layout_weight="1"
@@ -132,7 +150,10 @@
                 android:layout_marginRight="20dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/telefon"
-                android:hint="@string/telefonskaSt"/>
+                android:hint="@string/telefonskaSt"
+                android:background="?attr/colorSecondary"
+                android:padding="5dp"
+                android:layout_marginVertical="5dp"/>
         </LinearLayout>
 
         <TextView
@@ -175,6 +196,14 @@
             android:id="@+id/newDelovnoMesto"
             android:text="@string/gumbDodaj"
             android:layout_gravity="center"
+            android:layout_margin="10dp"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/izvozi"
+            android:text="@string/izvozi"
+            android:layout_gravity="right"
             android:layout_margin="10dp"/>
 
     </LinearLayout>
