--- a/app/src/main/res/layout/list_item_izkusnje.xml
+++ b/app/src/main/res/layout/list_item_izkusnje.xml
@@ -11,7 +11,10 @@
         android:layout_height="wrap_content"
         android:inputType="number"
         android:id="@+id/start"
-        android:hint="@string/od"/>
+        android:hint="@string/od"
+        android:background="?attr/colorSecondary"
+        android:padding="5dp"
+        android:layout_marginVertical="5dp"/>
 
     <EditText
         android:layout_width="0dip"
@@ -21,7 +24,10 @@
         android:layout_height="wrap_content"
         android:inputType="number"
         android:id="@+id/end"
-        android:hint="@string/oddo"/> <!-- Ta stvar "do" bere v angleščini in noče pustit stringa, ki se imenuje sam "do" !-->
+        android:hint="@string/oddo"
+        android:background="?attr/colorSecondary"
+        android:padding="5dp"
+        android:layout_marginVertical="5dp"/> <!-- Ta stvar "do" bere v angleščini in noče pustit stringa, ki se imenuje sam "do" !-->
 
     <EditText
         android:layout_width="0dip"
@@ -30,5 +36,8 @@
         android:layout_marginRight="20dp"
         android:layout_height="wrap_content"
         android:id="@+id/opis"
-        android:hint="@string/studijskaSmer"/>
+        android:hint="@string/studijskaSmer"
+        android:background="?attr/colorSecondary"
+        android:padding="5dp"
+        android:layout_marginVertical="5dp"/>
 </LinearLayout>
